@startuml

skinparam defaultFontName monospaced

'=======================================================================================================================
class ShaderPipeline {
    + ctor(vsCode, fsCode)
--
    + use()
}

'=======================================================================================================================
class OpenGlRenderer2d {
    + createGeometryBatch()
    + renderGeometryBatch(batch)
}

'-----------------------------------------------------------------------------------------------------------------------
OpenGlRenderer2d *-- ShaderPipeline

'=======================================================================================================================
class OglVertexArrayObject
class OglVertexBuffer
class OglIndexBuffer

'=======================================================================================================================
class OglGeometryBatch

'-----------------------------------------------------------------------------------------------------------------------
OglGeometryBatch *-- OglVertexArrayObject
OglGeometryBatch *-- OglVertexBuffer
OglGeometryBatch *-- "one per GL prim. type" OglIndexBuffer

'-----------------------------------------------------------------------------------------------------------------------
OpenGlRenderer2d --> OglGeometryBatch

'=======================================================================================================================
@enduml
